Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Test by wwfandy</title>
+    <title>Test2 by wwfandy</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Test</h1>
+            <h1>Test2</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
@@ -45,7 +45,7 @@
 
 
       <section id="main_content">
-        <p>Test</p>
+        <p>Test2</p>
       </section>
 
       <footer>
